# evaluated-house-price

./: .python-version  pyproject.toml
app/: 2021-01-20 건물 실거래가 조회.ipynb  db.sqlite3  건축물대장정보.ipynb  주택가격조회테스트.csv  테스트.csv
app/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  건축물대장정보-checkpoint.ipynb
app/addresses/: models.py
app/addresses/migrations/: 0001_initial.py
app/config/: settings.py
