[tool.poetry]
name = "real-estate"
version = "0.1.0"
description = ""
authors = ["johnkdo2020 <johnkdo2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "<4.0"
notebook = "^6.4.7"
django-extensions = "^3.1.5"
pytesseract = "^0.3.8"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
